nexus-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: repo-nexus
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nexus-server
    spec:
      securityContext:
          fsGroup: 2000
      containers:
        - name: nexus
          image: sonatype/nexus3:latest
          resources:
            limits:
              # Change by Hadi, to workaround low memory/cpu
              #memory: "3500Mi"
              #cpu: "1"
              memory: "2400Mi"
              cpu: "750m"
            requests:
              memory: "2000Mi"
              cpu: "250m"
          ports:
            - containerPort: 8081
            - containerPort: 5000
          volumeMounts:
            - name: nexus-data
              mountPath: /nexus-data
      volumes:
        - name: nexus-data
          #emptyDir: {}
          persistentVolumeClaim: 
            claimName: nexus-data-pvc
      priorityClassName: high-priority
