ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: planty-cd
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    #certmanager.k8s.io/issuer: "letsencrypt-staging"
    #certmanager.k8s.io/acme-challenge-type: http01
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    #- planty-cd.ddns.net
    - cd.planty-ideas.net
    secretName: cd-planty-ideas-tls
  rules:
  #- host: planty-cd.ddns.net
  - host: nexus.cd.planty-ideas.net
    http:
      paths:
      #- path: /nexus
      - path: /
        backend:
          serviceName: repo-nexus-service
          servicePort: 8081
  #- host: planty-cd.ddns.net
  - host: docker.cd.planty-ideas.net
    http:
      paths:
      #- path: /docker
      - path: /
        backend:
          serviceName: repo-nexus-service
          servicePort: 5000
  #- host: planty-cd.ddns.net
  - host: jenkins.cd.planty-ideas.net
    http:
      paths:
      #- path: /jenkins
      - path: /
        backend:
          serviceName: cd-jenkins
          servicePort: 8080
